[package]
name = "ram-sentinel"
version = "0.1.2"
edition = "2024"
description = "The Surgical Memory Guardian for Linux Desktops"
license = "MIT"
repository = "https://github.com/benedictjohannes/ram-sentinel"

[dependencies]
byte-unit = "5.2.0"
clap = { version = "4.5.53", features = ["derive"] }
directories = "6.0.0"
env_logger = "0.11.8"
log = "0.4.29"
nix = { version = "0.30.1", features = ["signal", "process"] }
notify-rust = "4.11.7"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sysinfo = { version = "0.37.2", features = ["system"] }
toml = "0.9.8"
