[package]
name = "ram-sentinel"
version = "0.1.4"
edition = "2024"
description = "A Surgical OOM prevention daemon for Linux. Configurable to reads RAM, swap and/or PSI (Pressure Stall Information) to kill specific tabs/processes before system freeze."
license = "MIT"
repository = "https://github.com/benedictjohannes/ram-sentinel"
readme = "README.md"
keywords = ["oom", "linux", "memory", "psi", "daemon", "cli", "ram", "swap"]
categories = [
    "memory-management",
    "system-administration",
    "command-line-utilities",
]
homepage = "https://github.com/benedictjohannes/ram-sentinel"
documentation = "https://docs.rs/ram-sentinel"

[dependencies]
byte-unit = "5.2.0"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
directories = "6.0.0"
env_logger = "0.11.8"
log = "0.4.29"
nix = { version = "0.30.1", features = ["signal", "process"] }
notify-rust = "4.11.7"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sysinfo = { version = "0.37.2", features = ["system"] }
toml = "0.9.8"
